--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "build": "tsc",
+    "start": "tsc && node ./dist/app.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -16,7 +18,6 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "openai": "^4.47.1"
